[tool.poetry]
name = "bind-client"
version = "2022.6.1.dev"
description = "Integración con la API del Banco Industrial"
authors = ["Alejandro M. BERNARDIS <alejandro.bernardis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
